// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="soui-gap soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="soui-radio-group"
>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="soui-slider soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-background"
      />
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="soui-gap soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
